# ncdg

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
cdg_lib/: __init__.py  analysis.py  graph.py  models.py  path_resolver.py  propagator.py  serialization.py  solver.py  types.py
experiments/: benchmark_multiversion.py  benchmark_real_firmware.py  benchmark_real_firmware_angr_results.json  benchmark_real_firmware_results.json  embedder_eval_results.json  eval_embedder.py  experiments.py  rq11_results.json  rq12_results.json  rq13_results.json  rq14_results.json  rq15_results.json  rq16_results.json  rq_conflict_results.json  rq_conflict_table.csv  rq_speed_results.json  run_all_rqs.sh  run_remaining_rqs.sh  run_rq11.py  run_rq12.py  run_rq13.py  run_rq14.py  run_rq16.py  run_rq_alpha_sweep.py  run_rq_conflict.py  run_rq_speed.py  verify.py
firmware/: README.md  __init__.py  builder.py  config.py  cve_targets.yaml  explorer.py  extractor.py  skeleton.py  synthetic_conflict_loader.py
scripts/: build_binaries.sh  build_faiss_index.py  build_neural_sim_edges.py  build_predictor_corpus.py  build_real_angr_corpus.py  build_real_angr_labeled_corpus.py  build_smtcomp_corpus.py  build_synthetic_predictor_corpus.py  compare_results.py  download_smtcomp.sh  generate_llm_cves.py  run_full_verify.sh  train_all.sh  train_embedder.py  train_predictor.py  validate_llm_cves.py  verify_in_docker.sh
src/: cdg_bench_v1.0.c  cdg_bench_v1.1.c  cdg_bench_v1.2.c  cdg_bench_v1.3.c
tests/: conftest.py  test_audit.py  (+40 more)
(+125 files in other folders)
